change default values

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <label>Address 2</label>
       <input type = "text"
              id = "addr2"
-             value = "San Diego"
+             value = "New York City"
              size = 50 />
     </div>
     <div class="block">
@@ -30,7 +30,7 @@
       <label>Distance</label>
       <input type = "text"
              id = "scale"
-             value = "distance between the earth and sun"
+             value = "distance between the earth and neptune"
              size = 50 />
     </div>
     <div class="block">
